# pyfk

./: .buildinfo  .coveragerc  .gitignore  CNAME  LICENSE  Pipfile  README.md  README.rst  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  setup_cython.py
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish_conda.yml  sphinx.yml  workflow.yml
_modules/: index.html  pyfk.html
_modules/pyfk/: setting.html
_modules/pyfk/config/: config.html  radiats.html
_modules/pyfk/gf/: gf.html
_modules/pyfk/gf/cuda/: utils.html  waveform_integration_cuda.html
_modules/pyfk/sync/: sync.html
_modules/pyfk/tests/config/: test_config.html
_modules/pyfk/tests/gf/: test_gf.html  test_gf_mpi.html
_modules/pyfk/tests/sync/: test_sync.html
_modules/pyfk/tests/taup/: test_taup.html
_modules/pyfk/utils/: error_message.html
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/pyfk/: index.rst.txt
_sources/autoapi/pyfk/config/: index.rst.txt
_sources/benchmark/: benchmark.rst.txt
_sources/introduction/: install.rst.txt  tutorial.rst.txt
_sources/parallel/: parallel.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/pyfk/: index.html
autoapi/pyfk/config/: index.html
autoapi/pyfk/gf/: index.html
autoapi/pyfk/setting/: index.html
autoapi/pyfk/sync/: index.html
autoapi/pyfk/taup/: index.html
autoapi/pyfk/tests/: index.html
autoapi/pyfk/utils/: index.html
benchmark/: benchmark.html
conda/: README.md  build.sh  meta.yaml  run_test.sh
docs/: conf.py  index.rst
docs/_templates/: layout.html
docs/gallery/: gallery.rst
docs/introduction/: install.rst  tutorial.rst
docs/parallel/: parallel.rst
gallery/: gallery.html
introduction/: install.html  tutorial.html
parallel/: parallel.html
profile/: profile_gc.py
pyfk/: __init__.py  setting.py
pyfk/config/: config.py  radiats.py
pyfk/gf/: complex.pxd  ffr.py  gf.py  waveform_integration.pyx
pyfk/gf/cuda/: utils.py  waveform_integration_cuda.py
pyfk/sync/: sync.py
pyfk/taup/: taup.pyx
pyfk/tests/config/: test_config.py
pyfk/tests/data/: 1066a.nd  ak135f_no_mud.nd  prem.nd
pyfk/tests/gf/: test_gf.py  test_gf_mpi.py
pyfk/tests/sync/: test_sync.py
pyfk/tests/taup/: test_taup.py
pyfk/utils/: __init__.py  complex.pxd
(+105 files in other folders)
