[tool.poetry]
name = "pyfk"
version = "0.3.1"
description = "Pyfk is the python version of FK used to calculate the Green's function and the synthetic waveforms for the 1D Earth model."
authors = ["Ziyi Xi <xiziyi2015@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/ziyixi/pyfk"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Environment :: GPU",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
    ]

[tool.poetry.dependencies]
python = "~3.7 || >=3.8, <3.11"
numpy = [
    {version="^1.21.5", python="~3.7"},
    {version="^1.22.3", python=">=3.8, <3.10"}
    ]
obspy = "^1.3.0"
Cython = "^0.29.28"
scipy = [
    {version="^1.7.0", python="~3.7"},
    {version="^1.8.0", python=">=3.8, <3.10"}
    ]
cysignals = "^1.11.2"
mpi4py = { version = "^3.1.3", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pytest-mpi = "^0.6"
autopep8 = "^1.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
pydata-sphinx-theme = "^0.8.1"
sphinx-autoapi = "^1.8.4"
jupyter-sphinx = "^0.3.2"
sphinx-copybutton = "^0.5.0"

[tool.poetry.extras]
mpi = ["mpi4py"]

[build-system]
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/refs/tags/1.1.0b3.zip","setuptools","numpy", "obspy", "cython", "scipy", "cysignals","mpi4py"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
# The allows us to build C extensions (using Cython). Unstable feature
# https://github.com/python-poetry/poetry/issues/2740#issuecomment-666551481
script = "setup_cython.py"
# see https://github.com/python-poetry/poetry/issues/2740#issuecomment-860744196
generate-setup-file = true
